@@ -6,6 +6,6 @@ importFrom("utils", stack, unstack, head, tail, download.file)
 importFrom("graphics", "hist", "lines", "image", "rect", "filled.contour", "contour", "persp", "pairs", "text", "boxplot", "points", "abline", "legend", "title", "strheight", "strwidth")
 importFrom("grDevices", "as.raster", "terrain.colors", "heat.colors", "col2rgb", "rainbow", "dev.flush", "dev.off", "dev.new", "xy.coords", "png")
 exportClasses(Extent, BasicRaster, Raster, RasterLayer, RasterBrick, RasterStack, RasterStackBrick)
-exportMethods("[", "==", '!=', '!', approxNA, as.array, as.character, as.vector, as.matrix, area, bandnr, barplot, brick, calc, clump, crop, disaggregate, distance, extent, extract, extend, flip, head, intersect, is.factor, merge, mosaic, ncell, nlayers, overlay, plot, plotRGB, raster, reclassify, resample, rotate, sampleRandom, stackSelect, shift, subs, t, tail, trim, unique, unstack, union, xmin, xmax, ymin, ymax, zonal)
+exportMethods("[", "==", '!=', '!', approxNA, as.array, as.character, as.vector, as.matrix, area, bandnr, barplot, brick, calc, clump, crop, disaggregate, distance, erase, extent, extract, extend, flip, head, intersect, is.factor, merge, mosaic, ncell, nlayers, overlay, plot, plotRGB, raster, reclassify, resample, rotate, sampleRandom, stackSelect, shift, subs, t, tail, trim, unique, unstack, union, xmin, xmax, ymin, ymax, zonal)
 useDynLib(raster)
 exportPattern("^[^\\.]")
