@@ -5,11 +5,12 @@
 
 
 kernelDensity <- function(xy, r, bandwidth) {
+	requireNamespace("MASS")
     lims <- as.vector(extent(r)) + rep(res(r), each=2) * c(0.5,-0.5)
     n <- rev(dim(r)[1:2])
     xy <- .pointsToMatrix(xy)
-		k <- raster( MASS::kde2d(xy[,1], xy[,2], h=bandwith, n=n, lims=lims) )
-		# to avoid possible small changes due to floating point math and to transfer CRS
-		setValues(r, getValues(k)) 
+	k <- raster( MASS::kde2d(xy[,1], xy[,2], h=bandwidth, n=n, lims=lims) )
+	# to avoid possible small changes due to floating point math and to transfer CRS
+	setValues(r, getValues(k)) 
 }
 
